Code review: SAK-13291 Place literals first / remove inefficient constructors
git-svn-id: https://source.sakaiproject.org/svn/sections/trunk@47514 66ffb92e-73f9-0310-93c1-f5514f145a0a