@@ -68,8 +68,8 @@ public class AuthzTest extends SectionsTestBase{
     	// Add a course and a section to work from
     	Course course = courseMgr.createCourse(siteContext, "A course", false, false, false);
     	
-    	CourseSection sec1 = secMgr.addSection(course.getUuid(), "A section", (String)categories.get(0), new Integer(10), null, null, null, false,  false, false,  false, false, false, false);
-    	CourseSection sec2 = secMgr.addSection(course.getUuid(), "Another section", (String)categories.get(1), new Integer(10), null, null, null, false,  false, false,  false, false, false, false);
+    	CourseSection sec1 = secMgr.addSection(course.getUuid(), "A section", (String)categories.get(0), Integer.valueOf(10), null, null, null, false,  false, false,  false, false, false, false);
+    	CourseSection sec2 = secMgr.addSection(course.getUuid(), "Another section", (String)categories.get(1), Integer.valueOf(10), null, null, null, false,  false, false,  false, false, false, false);
     	
 		// Load students
 		User student1 = userMgr.createUser("student1", "Joe Student", "Student, Joe", "jstudent");
